miniextendr-macros/tests/ui/derive_dataframe_enum_struct_field_no_derive.stderr
warning: unexpected `cfg` condition value: `rayon`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Point` doesn't implement `Debug`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ the trait `Debug` is not implemented for `Point`
   |
   = note: add `#[derive(Debug)]` to `Point` or manually `impl Debug for Point`
help: the trait `Debug` is implemented for `Vec<T, A>`
  --> $RUST/alloc/src/vec/mod.rs
   |
   | impl<T: fmt::Debug, A: Allocator> fmt::Debug for Vec<T, A> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider annotating `Point` with `#[derive(Debug)]`
   |
 6 + #[derive(Debug)]
 7 | struct Point {
   |

error[E0277]: the trait bound `Point: Clone` is not satisfied
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ the trait `Clone` is not implemented for `Point`
   |
   = note: required for `Option<Point>` to implement `Clone`
   = note: 1 redundant requirement hidden
   = note: required for `Vec<Option<Point>>` to implement `Clone`
help: consider annotating `Point` with `#[derive(Clone)]`
   |
 6 + #[derive(Clone)]
 7 | struct Point {
   |

error[E0599]: no function or associated item named `to_dataframe` found for struct `Point` in the current scope
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
 6 | struct Point {
   | ------------ function or associated item `to_dataframe` not found for this struct
...
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ function or associated item not found in `Point`
   |
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait `DataFrameRow` is not implemented for `Point`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:14:32
   |
14 |     Located { id: i32, origin: Point },
   |                                ^^^^^ add `#[derive(DataFrameRow)]` to `Point`, annotate the field with `#[dataframe(as_list)]` to keep it as an opaque list-column, or annotate with `#[dataframe(as_factor)]` for unit-only enums
   |
help: the trait `DataFrameRow` is not implemented for `Point`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:6:1
   |
 6 | struct Point {
   | ^^^^^^^^^^^^
   = note: struct- and enum-typed variant fields are flattened by default into prefixed columns; the inner type must implement `DataFrameRow` for this to work
help: the trait `DataFrameRow` is implemented for `Event`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
note: required by a bound in `_assert_inner_is_dataframe_row`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ required by this bound in `_assert_inner_is_dataframe_row`
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Point: miniextendr_api::markers::DataFramePayloadFields` is not satisfied
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:14:32
   |
14 |     Located { id: i32, origin: Point },
   |                                ^^^^^ unsatisfied trait bound
   |
help: the trait `miniextendr_api::markers::DataFramePayloadFields` is not implemented for `Point`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:6:1
   |
 6 | struct Point {
   | ^^^^^^^^^^^^
help: the trait `miniextendr_api::markers::DataFramePayloadFields` is implemented for `Event`
  --> tests/ui/derive_dataframe_enum_struct_field_no_derive.rs:11:10
   |
11 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
